# astrasim

./: .cursorrules  .gitignore  .pre-commit-config.yaml  README.md
backend/: .env.example  README.md  mypy.ini  pyproject.toml  ruff.toml
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/cli/: run_atm_straddle_ingestion.py  run_backfill.py  run_corp_actions_ingestion.py  run_expected_move.py  run_indexes_ingestion.py  run_ingestion.py  run_reconciliation.py  run_scheduler.py  run_validation.py  run_vol_surface.py
backend/app/clients/: polygon.py  polygon_corp_actions.py  polygon_indexes.py  (+1 more)
backend/tests/: conftest.py  test_app_health.py  test_app_meta.py  test_atm_straddle_api.py  test_atm_straddle_cli.py  test_atm_straddle_service.py  test_backfill_orchestration.py  test_corp_actions_ingestion.py  test_corp_actions_ingestion_api.py  test_db_dependency.py  test_expected_move_api.py  test_expected_move_cli.py  test_expected_move_service.py  test_indexes_ingestion.py  test_indexes_ingestion_api.py  test_ingestion_api.py  test_ohlcv_ingestion.py  test_options_cache.py  test_options_degraded_mode.py  test_options_force_recompute.py  test_options_refresh_policy.py  test_options_refresh_scheduler.py  test_polygon_client.py  test_polygon_corp_actions_client.py  test_polygon_indexes_client.py  test_polygon_options_client.py  test_scheduler_api.py  test_scheduler_jobs.py  test_scheduler_registration.py  test_validation_engine.py  test_vol_surface_api.py  test_vol_surface_cli.py  test_vol_surface_client_helpers.py  test_vol_surface_service.py
(+81 files in other folders)
